[package]
name = "website_checker"
version = "0.1.0"
edition = "2021"
description = "A concurrent website monitoring tool built in Rust."

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
